/*
 * This file is part of the NUbots Codebase.
 *
 * The NUbots Codebase is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The NUbots Codebase is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Copyright 2013 NUBots <nubots@nubots.net>
 */

syntax = "proto3";

package messages.support.optimisation;

import "messages/Vector.proto";
import "messages/Matrix.proto";
import "messages/support/optimisation/Estimate.proto";

message OptimiserParameters {
    Estimate initial = 1;
    vec upper_bound = 2;
    vec lower_bound = 3;
    uint32 batch_size = 4;
}

 message RegisterOptimisation {
    string group = 1;
    bool network = 2;
    OptimiserParameters parameters = 3;
}

message RequestParameters {
    string group = 1;
    int32 nSamples = 2;
};

message Parameters {
    string group = 1;
    int32 generation = 2;
    mat samples = 3;
    mat covariance = 4;
};